--- a/AsistenciaRDM/app/src/main/AndroidManifest.xml
+++ b/AsistenciaRDM/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".EventoActivity" />
+        <activity
+            android:name=".MainAsistenciaActivity"
+            android:label="@string/title_activity_main_asistencia"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
