--- a/AsistenciaRDM 2.5/app/build.gradle
+++ b/AsistenciaRDM 2.5/app/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.facebook.fresco:fresco:1.1.0'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.android.support:support-v4:25.3.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
