--- a/AsistenciaRDM 2.5.2/app/build.gradle
+++ b/AsistenciaRDM 2.5.2/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-
+    compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 
 
