--- a/AsistenciaRDM 2.5.2/app/src/main/AndroidManifest.xml
+++ b/AsistenciaRDM 2.5.2/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:name=".MainAsistenciaActivity"
             android:label="@string/title_activity_main_asistencia"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".CrearEvento"></activity>
     </application>
 
 </manifest>
